feat: implementado arquivo de treinamento

--- a/salvarDadosSql.ipynb
+++ b/salvarDadosSql.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "arquivo_bovespa = './dados/COTAHIST_A2022.TXT'\n",
@@ -54,6 +55,8 @@
     "\n",
     "dados_acoes = dados_acoes[dados_acoes[\"tipo_registro\"]==1]\n",
     "dados_acoes = dados_acoes[(dados_acoes[\"preco_melhor_oferta_compra\"]!=0) & (dados_acoes[\"preco_melhor_oferta_venda\"]!=0)]\n",
+    "dados_acoes = dados_acoes[np.isin(dados_acoes[\"cod_bdi\"],[2])]\n",
+    "\n",
     "\n",
     "'''\n",
     "    Deleta coluna não necessárias\n",
