feat: arquivo completo python para treinamento da deep learning

--- a/treinamentoDeepLearning.ipynb
+++ b/treinamentoDeepLearning.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -617,40 +617,31 @@
    "source": [
     "# Projeção da Rede Neural\n",
     "\n",
-    "1.   `conv1`: Camada convolucional com kernel 3x1, 3 canais de saída, sem padding, stride 1 e ativação ReLU.\n",
+    "1.   `conv1`: Camada convolucional com kernel 3x1, 2 canais de saída, sem padding, stride 1 e ativação ReLU.\n",
     "2.   `pool1`: Camada _max-pooling_ 3x1, com stride 1.\n",
-    "3.   `conv2`: Camada convolucional com kernel 3x2, 5 canais de saída, sem padding, stride 1 e ativação ReLU.\n",
-    "4.   `drop1`: Dropout 10%.\n",
-    "5.   `lin1`: Camada feedforward que recebe os dados serializados e gera as saídas. A função de ativação final é _softmax_, mas ela é implementada no cálculo da função de custo, então não precisa ser considerada aqui.\n",
+    "5.   `lin1`: Camada feedforward que recebe os dados serializados e gera as saídas.\n",
     "\n",
-    "N1 = 3\n",
+    "N1 = 2\n",
     "\n",
     "N2a = 8\n",
     "\n",
     "N2b = 5\n",
     "\n",
-    "N3 = 3 * 8 * 5\n",
+    "N3 = 2 * 8 * 5\n",
     "\n",
-    "N4 = 3\n",
+    "N4 = 2\n",
     "\n",
     "N5a = 6\n",
     "\n",
     "N5b = 5\n",
     "\n",
-    "N6 = 3 * 6 * 5\n",
-    "\n",
-    "N7 = 5\n",
-    "\n",
-    "N8a = 4\n",
-    "\n",
-    "N8b = 4\n",
-    "\n",
-    "N9 = 5 * 4 * 4\n"
+    "N6 = 2 * 6 * 5\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,31 +649,28 @@
     "    \n",
     "    def __init__(self):\n",
     "        super(ConvNet, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 3, kernel_size=(3,1),stride=1) \n",
+    "        self.conv1 = nn.Conv2d(1, 2, kernel_size=(3,1),stride=1) \n",
     "        \n",
     "        self.pool1 = nn.MaxPool2d((3,1), stride=1)\n",
-    "\n",
-    "        self.conv2 = nn.Conv2d(3, 5, kernel_size=(3,2),stride=1)\n",
-    "\n",
-    "        self.drp1 = nn.Dropout2d(0.1)\n",
     "        \n",
-    "        self.lin1 = nn.Linear(80, 7)\n",
+    "        self.lin1 = nn.Linear(60, 80)\n",
+    "        self.lin2 = nn.Linear(80, 70)\n",
+    "        self.lin3 = nn.Linear(70, 7)\n",
     "  \n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
     "        x = torch.relu(x)\n",
     "        x = self.pool1(x)\n",
-    "        x = self.conv2(x)\n",
-    "        x = self.drp1(x)\n",
-    "        x = torch.relu(x)\n",
-    "        x = x.view(-1, 80)\n",
+    "        x = x.view(-1, 60)\n",
     "        x = self.lin1(x)\n",
+    "        x = self.lin2(x)\n",
+    "        x = self.lin3(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -690,11 +678,11 @@
      "output_type": "stream",
      "text": [
       "ConvNet(\n",
-      "  (conv1): Conv2d(1, 3, kernel_size=(3, 1), stride=(1, 1))\n",
+      "  (conv1): Conv2d(1, 2, kernel_size=(3, 1), stride=(1, 1))\n",
       "  (pool1): MaxPool2d(kernel_size=(3, 1), stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (conv2): Conv2d(3, 5, kernel_size=(3, 2), stride=(1, 1))\n",
-      "  (drp1): Dropout2d(p=0.1, inplace=False)\n",
-      "  (lin1): Linear(in_features=80, out_features=7, bias=True)\n",
+      "  (lin1): Linear(in_features=60, out_features=80, bias=True)\n",
+      "  (lin2): Linear(in_features=80, out_features=70, bias=True)\n",
+      "  (lin3): Linear(in_features=70, out_features=7, bias=True)\n",
       ")\n"
      ]
     }
@@ -713,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,23 +737,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "evaluate() missing 1 required positional argument: 'y_hat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mb:\\Python\\Projeto B3\\treinamentoDeepLearning.ipynb Célula: 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/b%3A/Python/Projeto%20B3/treinamentoDeepLearning.ipynb#ch0000029?line=32'>33</a>\u001b[0m \u001b[39m# A cada 200 épocas imprimimos o\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/b%3A/Python/Projeto%20B3/treinamentoDeepLearning.ipynb#ch0000029?line=33'>34</a>\u001b[0m \u001b[39m# erro do último lote e a acurácia\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/b%3A/Python/Projeto%20B3/treinamentoDeepLearning.ipynb#ch0000029?line=34'>35</a>\u001b[0m \u001b[39m# nos dados de treinamento\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/b%3A/Python/Projeto%20B3/treinamentoDeepLearning.ipynb#ch0000029?line=35'>36</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (j \u001b[39m%\u001b[39m \u001b[39m200\u001b[39m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/b%3A/Python/Projeto%20B3/treinamentoDeepLearning.ipynb#ch0000029?line=36'>37</a>\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mfloat\u001b[39m(e), evaluate(Xt, Yt))\n",
-      "\u001b[1;31mTypeError\u001b[0m: evaluate() missing 1 required positional argument: 'y_hat'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8556772470474243 25.092974168258117\n",
+      "1.8398123979568481 25.26887124334104\n",
+      "1.837051510810852 25.449793949140616\n"
      ]
     }
    ],
    "source": [
-    "for j in range(2001):\n",
+    "for j in range(200001):\n",
     "\n",
     "  # Faremos o treinamento em lotes de\n",
     "  # tamanho igual a 128 amostras\n",
